--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -15,7 +15,7 @@ steps:
   args:
     - 'run'
     - 'deploy'
-    - '$$REPO_NAME'
+    - 'eli5plusplus'
     - '--image'
     - 'gcr.io/$PROJECT_ID/eli5-app:$COMMIT_SHA'
     - '--region'
